# mcp-lllm

./: .gitignore  AGENTS-EXAMPLE.md  LICENSE  README.md  mcp.py  mock_proxy.py  pyproject.toml
.github/workflows/: ci.yml
